Fixed the extra padding on the left side of  div in mobile view, also reduced padding between the timer and title

--- a/src/assets/scss/utils/_event.scss
+++ b/src/assets/scss/utils/_event.scss
@@ -292,13 +292,26 @@
     }
   }
 }
+.v-card .v-card-text {
+  @include media-respond(sm) {
+    //  padding: 0px 30px !important;
+  }
 
+  @include media-respond(xs) {
+    // flex-direction: column;
+  }
+}
 .event-information {
   display: flex;
   align-items: center;
+  
+  @include media-respond(md ){
+  }
 
   @include media-respond(xs) {
     flex-direction: column;
+    padding: 1rem 1rem 0rem 1rem !important;
+    align-items: normal;
   }
 
   .partipant--sec {
